feat: Delete MigrationStatusReport class
* This module is only internal for now, we decide to remove this classes instead depreciate it.